upd swagger login
